tests/chrono/fail_stable/unknown.rs
fn main() {
    sscanf::scanf!("hi", "{%O}", DateTime);
}